--- a/src/main/webapp/fbExp.html
+++ b/src/main/webapp/fbExp.html
@@ -16,11 +16,20 @@
     // for FB.getLoginStatus().
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      testAPI();
+      console.log('Welcome!  Fetching your information.... ');
+      FB.api('/me', function(response) {
+        console.log('Successful login for: ' + response.name);
+        document.getElementById('status').innerHTML =
+          'Thanks for logging in, ' + response.name + '!';
+      });
+
+      document.getElementById('loginlogout').innerHTML='Log out';
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
         'into this app.';
+
+      document.getElementById('loginlogout').innerHTML='Log in with Facebook';
     }
   }
 
@@ -33,43 +42,48 @@
     });
   }
 
-  function logoutHere() {
-    FB.logout(function(response) {
-      statusChangeCallback(response);
-    });
-  }
+  function loginlogout(){
+    FB.getLoginStatus(function(response) {
+          if (response.status === 'connected') {
+            console.log('start to logout');
 
-  function loginHere() {
-    FB.login(function(response) {
-      statusChangeCallback(response);
+            FB.logout(function(response) {
+              statusChangeCallback(response);
+            });
+          }else{
+            console.log('start to login');
+
+            FB.login(function(response) {
+              statusChangeCallback(response);
+            });
+          };
     });
   }
 
   window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '487802971565924',
-    cookie     : true,  // enable cookies to allow the server to access
-                        // the session
-    xfbml      : true,  // parse social plugins on this page
-    version    : 'v2.8' // use graph api version 2.8
-  });
+    FB.init({
+      appId      : '487802971565924',
+      cookie     : true,  // enable cookies to allow the server to access
+                          // the session
+      xfbml      : true,  // parse social plugins on this page
+      version    : 'v2.8' // use graph api version 2.8
+    });
 
-  // Now that we've initialized the JavaScript SDK, we call
-  // FB.getLoginStatus().  This function gets the state of the
-  // person visiting this page and can return one of three states to
-  // the callback you provide.  They can be:
-  //
-  // 1. Logged into your app ('connected')
-  // 2. Logged into Facebook, but not your app ('not_authorized')
-  // 3. Not logged into Facebook and can't tell if they are logged into
-  //    your app or not.
-  //
-  // These three cases are handled in the callback function.
+    // Now that we've initialized the JavaScript SDK, we call
+    // FB.getLoginStatus().  This function gets the state of the
+    // person visiting this page and can return one of three states to
+    // the callback you provide.  They can be:
+    //
+    // 1. Logged into your app ('connected')
+    // 2. Logged into Facebook, but not your app ('not_authorized')
+    // 3. Not logged into Facebook and can't tell if they are logged into
+    //    your app or not.
+    //
+    // These three cases are handled in the callback function.
 
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-  });
-
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
   };
 
   // Load the SDK asynchronously
@@ -81,16 +95,7 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 
-  // Here we run a very simple test of the Graph API after login is
-  // successful.  See statusChangeCallback() for when this call is made.
-  function testAPI() {
-    console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
-      document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
-    });
-  }
+
 </script>
 
 <!--
@@ -104,8 +109,7 @@
 
 <div id="status"></div>
 
-<button onclick="loginHere()">Sign up with Facebook Account</button>
-<button onclick="logoutHere()">Logout</button>
+<button onclick="loginlogout()" id="loginlogout"></button>
 <button onclick="checkLoginState()">Check Status</button>
 
 </body>
