--- a/src/main/webapp/pages/fbExp.html
+++ b/src/main/webapp/pages/fbExp.html
@@ -14,6 +14,14 @@
 <button onclick="loginlogout()" id="loginlogout"></button>
 <button onclick="checkLoginState()">Check Status</button><br>
 
+<button onclick="createChatrrom()" id="createChatrrom">Create Chat Room</button>
+
+<form id="joinChatrrom">
+<input type="submit" value="Join Chat Room">
+<input type="text" id="chatroomid">
+
+</form>
+
 <form id="chatbox">
 <input type="text" id="dialog">
 <input type="submit" value="Send">
