--- a/src/main/webapp/pages/fbExp.html
+++ b/src/main/webapp/pages/fbExp.html
@@ -14,13 +14,14 @@
 <button onclick="loginlogout()" id="loginlogout"></button>
 <button onclick="checkLoginState()">Check Status</button><br>
 
-<button onclick="createChatrrom()" id="createChatrrom">Create Chat Room</button>
+<button onclick="createChatroom()" >Create Chat Room</button>
 
 <form id="joinChatrrom">
 <input type="submit" value="Join Chat Room">
 <input type="text" id="chatroomid">
-
 </form>
+
+<button onclick="exitChatrrom()" id="exitChatrrom">Exit Chat Room</button>
 
 <form id="chatbox">
 <input type="text" id="dialog">
