--- a/src/main/webapp/pages/fbExp.html
+++ b/src/main/webapp/pages/fbExp.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+<div style="top:0; position: fixed; background: white; height: 20%">
 <div id="status"></div>
 
 <button onclick="loginlogout()" id="loginlogout"></button>
@@ -22,12 +23,13 @@
 		<td id="onlinestatus"></td>
 	</tr>
 </table>
-
-<div>
-
 </div>
 
-<form id="chatbox" style="bottom: 0; position: absolute;">
+<div id="chatarea" style="overflow: scroll;margin-bottom: 10%;margin-top: 20%;">
+	<table id="chatwindow"></table>
+</div>
+
+<form id="chatbox" style="bottom: 0; position: fixed;">
 	<input type="text" id="message" placeholder="Your message..."/>
 	<input type="text" id="receiver" placeholder="Receiver"/>
 	<input type="submit" id="doSendMsg" value="Send" />
